Fixes orders accordion - all collapsed by default
Also adds the order status to the header, and makes the header more clickable.

--- a/application.styl
+++ b/application.styl
@@ -71,6 +71,9 @@ button .fa, button .glyphicon
       text-align center
 
 #orders
+  .panel-title
+    a
+      display block
   form.filter
     margin-top 0.5em
     margin-bottom 0.5em
